--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ project.image=images/
 logging.level.org.springframework.security=DEBUG
 spring.profiles.active=dev
 
+#Mail Properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=officialmd1914@gmail.com
+spring.mail.password=...@Md13
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
