--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,6 @@ spring.profiles.active=dev
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=officialmd1914@gmail.com
-spring.mail.password=...@Md13
+spring.mail.password=pehh aofc dayn qhpt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
