--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/blog_apps_apis
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=anshudixit
 spring.jpa.show-sql=true
 
 #spring.datasource.url=jdbc:mysql://localhost:3307/blog_apps_apis
